Zoom distortment fixed on home page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@
     position: fixed;
     z-index: 10;
     max-width: 100%;
-    max-height: 52px;
+    max-height: 5px;
 }
 
 .navbar-guest {
